* Added some helpful features for developers to use the NoSQL Proxy for Database Type Modules
* Added ability to disable Data Type drop down menu JSP Tag using the 'disabled' attribute
* Fixed bug in editing Multistate Points where the value of 0 might be confused with an empty value 
* Fixed bug in editing Data Sources where the Data Source points list filters would be reset upon save.

*Version 2.2.2*
* Fixed bugs in Point Hierarchy importer to allow merging of folders.  Folders with the same name are merged into system.  Points duplicated across folders will only be saved as the last folder they are stored in.
* Renamed Import/Export icon to Configuration Import/Export
* Upgraded ma-priv to 1.1.5 due to ssl, startup and shutdown enhancements
* Upgraded serotonin-utils to 2.0.1 to capture new Serial Port stream enhancements that improve reliability
* Adding shutdown button to modules page and creating startup/shutdown pages to show users the system progress during these times.
* Added ability for administrators to switch user from the Users page

*Version 2.2.1*
* License bug where web server was loaded before license and was always limiting ip addresses to 3


*Version 2.2.0*
* Changed browser to open immediately to show startup screen
* Fixed bug at startup where some conditions could cause Mango to hang if an error was detected.  Now Mango should shutdown after fatal errors during startup.
* Added jSSC Serial Port library for easier use of serial port, RXTX has now been removed from the core and placed into any modules that still require it.
* Fixed bug in Event Report View where custom event types were failing to show up
* Added help to Chart view on data point details page to explain the Chart Servlet feature
* Cleaned up css styling on data source page
* Fixed bug on Data Source page where data source points table was leaving extra columns from previously viewed data sources