@@ -1230,7 +1230,7 @@ event.spinwave.heartbeat=Data not received from sensor {0}
 event.spinwave.attrNotFound=Attribute "{0}" not found in message from sensor {1}
 event.spinwave.unknownSensor=Data received from an unknown sensor {0}
 event.email.failure=Failed to send email titled "{0}" to "{1}". Message: "{2}"
-event.login=User {0} logged in
+event.login=User {0} logged in from remote address {1}
 event.alarmMaxIncreased=Maximum alarm level has increased from {0} to {1}
 event.alarmMaxDecreased=Maximum alarm level has decreased from {0} to {1}
 event.detector.periodState={0} has been {1} for more than {2}
